[gd_scene load_steps=8 format=2]

[ext_resource path="res://ui/hud/sandbox/SelectedSpellPanelContainer.gd" type="Script" id=1]
[ext_resource path="res://ui/hud/sandbox/QuitButton.gd" type="Script" id=2]
[ext_resource path="res://ui/ui_theme.tres" type="Theme" id=3]
[ext_resource path="res://ui/hud/sandbox/HamburgerButton.gd" type="Script" id=4]
[ext_resource path="res://ui/hud/sandbox/HamburgerPanel.gd" type="Script" id=5]
[ext_resource path="res://ui/hud/sandbox/HUDSandbox.gd" type="Script" id=6]
[ext_resource path="res://ui/hud/sandbox/SpellsList.gd" type="Script" id=7]

[node name="HUDSandbox" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -0.265747
margin_top = -0.484589
margin_right = -0.265747
margin_bottom = -0.484619
mouse_filter = 2
theme = ExtResource( 3 )
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HamburgerContainer" type="HBoxContainer" parent="."]
anchor_bottom = 1.0
margin_right = 147.0
size_flags_horizontal = 0
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpellPanel" type="PanelContainer" parent="HamburgerContainer"]
margin_right = 288.0
margin_bottom = 810.0
grow_horizontal = 0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="HamburgerContainer/SpellPanel"]
margin_left = 7.0
margin_top = 7.0
margin_right = 281.0
margin_bottom = 803.0

[node name="Label" type="Label" parent="HamburgerContainer/SpellPanel/VBoxContainer"]
margin_right = 274.0
margin_bottom = 53.0
text = "Feitiços disponíveis"

[node name="ScrollContainer" type="ScrollContainer" parent="HamburgerContainer/SpellPanel/VBoxContainer"]
margin_top = 57.0
margin_right = 274.0
margin_bottom = 607.0
grow_horizontal = 0
size_flags_horizontal = 3
size_flags_vertical = 3
follow_focus = true
scroll_horizontal_enabled = false

[node name="SpellsList" type="VBoxContainer" parent="HamburgerContainer/SpellPanel/VBoxContainer/ScrollContainer"]
margin_right = 274.0
grow_horizontal = 0
size_flags_horizontal = 3
alignment = 1
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SandboxButton" type="Button" parent="HamburgerContainer/SpellPanel/VBoxContainer"]
margin_top = 611.0
margin_right = 274.0
margin_bottom = 670.0
toggle_mode = true
text = "Sandbox"

[node name="UndoButton" type="Button" parent="HamburgerContainer/SpellPanel/VBoxContainer"]
margin_top = 674.0
margin_right = 274.0
margin_bottom = 733.0
text = "Desfazer"

[node name="ReadyButton" type="Button" parent="HamburgerContainer/SpellPanel/VBoxContainer"]
margin_top = 737.0
margin_right = 274.0
margin_bottom = 796.0
toggle_mode = true
text = "Pronto ▶"

[node name="HamburgerPanel" type="PanelContainer" parent="HamburgerContainer"]
visible = false
margin_left = 265.0
margin_right = 477.0
margin_bottom = 810.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 5 )

[node name="HamburgerList" type="VBoxContainer" parent="HamburgerContainer/HamburgerPanel"]
margin_left = 7.0
margin_top = 7.0
margin_right = 205.0
margin_bottom = 66.0
size_flags_horizontal = 3
size_flags_vertical = 0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuitButton" type="Button" parent="HamburgerContainer/HamburgerPanel/HamburgerList"]
margin_right = 198.0
margin_bottom = 59.0
size_flags_horizontal = 4
size_flags_vertical = 2
text = "Quittar bruto"
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="HamburgerContainer"]
visible = false
margin_left = 265.0
margin_right = 307.0
margin_bottom = 73.0
size_flags_vertical = 0

[node name="HamburgerButton" type="Button" parent="HamburgerContainer/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 35.0
margin_bottom = 66.0
size_flags_horizontal = 8
size_flags_vertical = 0
text = ">"
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SelectedSpellPanelContainer" type="PanelContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -152.5
margin_right = 152.5
margin_bottom = 67.0
grow_horizontal = 2
size_flags_horizontal = 4
size_flags_vertical = 0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SelectedSpell" type="Label" parent="SelectedSpellPanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 298.0
margin_bottom = 60.0
grow_horizontal = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Renomeie os feitiços"
align = 1
valign = 1
__meta__ = {
"_editor_description_": ""
}

[node name="SpellPanel" type="PanelContainer" parent="."]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="SpellPanel"]
margin_left = 7.0
margin_top = 7.0
margin_right = 254.0
margin_bottom = 803.0

[node name="Label" type="Label" parent="SpellPanel/VBoxContainer"]
margin_right = 247.0
margin_bottom = 53.0
text = "Próximos feitiços"

[node name="ScrollContainer" type="ScrollContainer" parent="SpellPanel/VBoxContainer"]
margin_top = 57.0
margin_right = 247.0
margin_bottom = 733.0
grow_horizontal = 0
size_flags_horizontal = 3
size_flags_vertical = 3
follow_focus = true
scroll_horizontal_enabled = false

[node name="SpellsList" type="VBoxContainer" parent="SpellPanel/VBoxContainer/ScrollContainer"]
margin_right = 247.0
grow_horizontal = 0
size_flags_horizontal = 3
alignment = 1
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ReadyButton" type="Button" parent="SpellPanel/VBoxContainer"]
margin_top = 737.0
margin_right = 247.0
margin_bottom = 796.0
toggle_mode = true
text = "Pronto ▶"

[connection signal="spell_renamed" from="HamburgerContainer/SpellPanel/VBoxContainer/ScrollContainer/SpellsList" to="SelectedSpellPanelContainer" method="_on_spell_selected"]
[connection signal="spell_selected" from="HamburgerContainer/SpellPanel/VBoxContainer/ScrollContainer/SpellsList" to="SelectedSpellPanelContainer" method="_on_spell_selected"]
[connection signal="spell_unselected" from="HamburgerContainer/SpellPanel/VBoxContainer/ScrollContainer/SpellsList" to="SelectedSpellPanelContainer" method="_on_spell_unselected"]
[connection signal="toggled" from="HamburgerContainer/SpellPanel/VBoxContainer/SandboxButton" to="." method="_on_SandboxButton_toggled"]
[connection signal="pressed" from="HamburgerContainer/SpellPanel/VBoxContainer/UndoButton" to="." method="_on_UndoButton_pressed"]
[connection signal="toggled" from="HamburgerContainer/SpellPanel/VBoxContainer/ReadyButton" to="." method="_on_ReadyButton_toggled"]
[connection signal="pressed" from="HamburgerContainer/HamburgerPanel/HamburgerList/QuitButton" to="HamburgerContainer/HamburgerPanel/HamburgerList/QuitButton" method="_on_QuitButton_pressed"]
[connection signal="pressed" from="HamburgerContainer/PanelContainer/HamburgerButton" to="HamburgerContainer/HamburgerPanel" method="_on_HamburgerButton_pressed"]
[connection signal="pressed" from="HamburgerContainer/PanelContainer/HamburgerButton" to="HamburgerContainer/PanelContainer/HamburgerButton" method="_on_HamburgerButton_pressed"]
[connection signal="toggled" from="HamburgerContainer/PanelContainer/HamburgerButton" to="HamburgerContainer/HamburgerPanel" method="_on_HamburgerButton_toggled"]
[connection signal="toggled" from="HamburgerContainer/PanelContainer/HamburgerButton" to="HamburgerContainer/PanelContainer/HamburgerButton" method="_on_HamburgerButton_toggled"]
[connection signal="spell_renamed" from="SpellPanel/VBoxContainer/ScrollContainer/SpellsList" to="SelectedSpellPanelContainer" method="_on_spell_selected"]
[connection signal="spell_selected" from="SpellPanel/VBoxContainer/ScrollContainer/SpellsList" to="SelectedSpellPanelContainer" method="_on_spell_selected"]
[connection signal="spell_unselected" from="SpellPanel/VBoxContainer/ScrollContainer/SpellsList" to="SelectedSpellPanelContainer" method="_on_spell_unselected"]
[connection signal="toggled" from="SpellPanel/VBoxContainer/ReadyButton" to="." method="_on_ReadyButton_toggled"]
